--- a/index.html
+++ b/index.html
@@ -148,13 +148,17 @@
     </header>
     <main class="flex-1">
       <div class="flex-row-center">
-        <h1 class="h1-styles mt-8 md:mt-0">Current Auction Listings</h1>
+        <h1 class="h1-styles w-[180px] md:w-[300px] mt-8 md:mt-0 text-center">
+          Current Auction Listings
+        </h1>
       </div>
       <div class="Categories flex-row-center">
-        <ul class="two-column-layout md:flex md:justify-center gap-4">
+        <ul
+          class="two-column-layout items-center justify-center md:flex md:justify-center gap-4 w-[70%]"
+        >
           <li>
             <a
-              class="h2-styles md:text-2xl category"
+              class="h2-styles md:text-2xl category category-hover"
               data-category="contemporary"
               href=""
               >Contemporary Art</a
@@ -162,7 +166,7 @@
           </li>
           <li>
             <a
-              class="category h2-styles md:text-2xl"
+              class="category h2-styles md:text-2xl category-hover"
               data-category="modern"
               href=""
               >Modern Art</a
@@ -170,7 +174,7 @@
           </li>
           <li>
             <a
-              class="category h2-styles md:text-2xl"
+              class="category h2-styles md:text-2xl category-hover"
               data-category="photography"
               href=""
             >
@@ -179,7 +183,7 @@
           </li>
           <li>
             <a
-              class="category h2-styles md:text-2xl"
+              class="category h2-styles md:text-2xl category-hover"
               data-category="sculpture"
               href=""
               >Sculptures</a
