fixed problem with sign in button display on side bar

--- a/auth/index.html
+++ b/auth/index.html
@@ -95,7 +95,7 @@
                 <span class="hidden span-text">Register</span>
               </a>
             </li>
-            <li id="sign-in-link-nav" class="">
+            <li id="sign-in-link-nav" class="sidebar-li-layout">
               <a class="nav-link link-flex" href="/auth/">
                 <img
                   class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
@@ -121,7 +121,7 @@
     </header>
     <main class="flex-1">
       <div class="flex-row-center">
-        <h1 class="h1-styles w-[40%] md:w-[400px] mt-2 mb-4">
+        <h1 class="h1-styles w-[40%] md:w-[400px] mt-2 mb-4 text-center">
           Sign in or Register an Account
         </h1>
       </div>
