--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <span class="hidden span-text">Register</span>
               </a>
             </li>
-            <li id="sign-in-link-nav" class="">
+            <li id="sign-in-link-nav" class="sidebar-li-layout">
               <a class="nav-link link-flex" href="/auth/">
                 <img
                   class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
@@ -153,9 +153,7 @@
         </h1>
       </div>
       <div class="Categories flex-row-center">
-        <ul
-          class="two-column-layout items-center justify-center md:flex md:justify-center gap-4 w-[70%]"
-        >
+        <ul class="two-column-layout md:flex md:justify-center gap-4 w-[70%]">
           <li>
             <a
               class="h2-styles md:text-2xl category category-hover"
