--- a/my_listings/index.html
+++ b/my_listings/index.html
@@ -95,7 +95,7 @@
                 <span class="hidden span-text">Register</span>
               </a>
             </li>
-            <li id="sign-in-link-nav" class="">
+            <li id="sign-in-link-nav" class="sidebar-li-layout">
               <a class="nav-link link-flex" href="/auth/">
                 <img
                   class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
