--- a/profile/index.html
+++ b/profile/index.html
@@ -67,8 +67,8 @@
                 Register
               </a>
             </li>
-            <li>
-              <a id="sign-in-link-nav" href="/auth/">
+            <li id="sign-in-link-nav" class="sidebar-li-layout">
+              <a href="/auth/">
                 <img src="../images/sign-in-desktop.png" alt="sign in icon" />
                 Sign in
               </a>
