Added styles to profile page and to bids image on home page

--- a/auth/index.html
+++ b/auth/index.html
@@ -139,7 +139,7 @@
 
       <div class="hidden relative" id="sign-in-form">
         <form
-          class="sign-in-form sign-in sign-in-form-styles form-styles"
+          class="sign-in-form sign-in form-padding form-styles"
           name="sign-in"
         >
           <h1 class="h1-styles mb-4 form-title-styles">Sign in</h1>
@@ -196,7 +196,7 @@
         <form
           id="reg-form"
           method="post"
-          class="form-styles reg-form-styles"
+          class="form-styles form-padding"
           name="register"
         >
           <div class="flex flex-row relative"></div>
