--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -66,7 +66,7 @@
                 Register
               </a>
             </li>
-            <li id="sign-in-link-nav" class="sidebar-li-layout">
+            <li id="sign-in-link-nav" class="">
               <a href="/auth/">
                 <img
                   src="../../images/sign-in-desktop.png"
