--- a/my_bids/index.html
+++ b/my_bids/index.html
@@ -67,7 +67,7 @@
                 Register
               </a>
             </li>
-            <li id="sign-in-link-nav" class="sidebar-li-layout">
+            <li id="sign-in-link-nav" class="">
               <a href="/auth/">
                 <img src="../images/sign-in-desktop.png" alt="sign in icon" />
                 Sign in
