--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <span class="hidden span-text">Sign in</span>
               </a>
             </li>
-            <li class="sidebar-li-layout">
+            <li class="sign-out-btn-li">
               <button class="sign-out-btn nav-link link-flex">
                 <img
                   class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
