--- a/my_bids/index.html
+++ b/my_bids/index.html
@@ -73,7 +73,7 @@
                 Sign in
               </a>
             </li>
-            <li>
+            <li class="sign-out-btn-li">
               <button class="sign-out-btn">
                 <img
                   class=""
