--- a/profile/index.html
+++ b/profile/index.html
@@ -12,14 +12,14 @@
       <div class="side-bar sidebar-styles">
         <img
           class="logo w-16 h-auto md:w-20 md:h-auto"
-          src="../../images/Logo.png"
+          src="../images/Logo.png"
           alt="Art logo"
         />
         <button id="hamburger-btn">
           <img
             id="hamburger-icon"
             class="w-16 h-16 md:w-20 md:h-20"
-            src="../../images/Hamburger-icon.png"
+            src="../images/Hamburger-icon.png"
             alt=""
           />
         </button>
@@ -29,7 +29,7 @@
               <a class="nav-link link-flex" href="/">
                 <img
                   class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
-                  src="../../images/icons8-home-Desktop.png"
+                  src="../images/icons8-home-Desktop.png"
                   alt="home icon"
                 />
                 <span class="span-text hidden">Home</span>
@@ -39,7 +39,7 @@
               <a class="nav-link link-flex" href="/profile/">
                 <img
                   class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
-                  src="../../images/icons8-user-desktop.png"
+                  src="../images/icons8-user-desktop.png"
                   alt="profile icon"
                 />
                 <span class="span-text hidden">My Profile</span></a
@@ -50,7 +50,7 @@
               <a class="nav-link link-flex" href="/my_listings/">
                 <img
                   class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
-                  src="../../images/icons8-my-listings-desktop.png"
+                  src="../images/icons8-my-listings-desktop.png"
                   alt="my listings icon"
                 />
                 <span class="span-text hidden">My Listings</span>
@@ -64,7 +64,7 @@
               >
                 <img
                   class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
-                  src="../../images/icons8-bids-Desktop.png"
+                  src="../images/icons8-bids-Desktop.png"
                   alt="bids icon"
                 />
                 <span class="hidden span-text">My Bids</span>
@@ -78,7 +78,7 @@
               >
                 <img
                   class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
-                  src="../../images/icons8-add-desktop.png"
+                  src="../images/icons8-add-desktop.png"
                   alt="add icon"
                 />
 
@@ -89,7 +89,7 @@
               <a class="nav-link link-flex" id="reg-link-nav" href="/auth/">
                 <img
                   class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
-                  src="../../images/icons8-register-desktop.png"
+                  src="../images/icons8-register-desktop.png"
                   alt="register icon"
                 />
                 <span class="hidden span-text">Register</span>
@@ -99,17 +99,17 @@
               <a class="nav-link link-flex" href="/auth/">
                 <img
                   class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
-                  src="../../images/sign-in-desktop.png"
+                  src="../images/sign-in-desktop.png"
                   alt="sign in icon"
                 />
                 <span class="hidden span-text">Sign in</span>
               </a>
             </li>
-            <li class="sign-out-btn-li">
+            <li class="sign-out-btn-li sidebar-li">
               <button class="sign-out-btn nav-link link-flex">
                 <img
                   class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
-                  src="../../images/icons8-sign-out-desktop.png"
+                  src="../images/icons8-sign-out-desktop.png"
                   alt="sign out icon"
                 />
                 <span class="hidden span-text">Sign Out</span>
@@ -210,21 +210,21 @@
         <a href="">
           <img
             class="social-media-icons"
-            src="../../images/icons8-facebook-desktop.png"
+            src="../images/icons8-facebook-desktop.png"
             alt="facebook icon"
           />
         </a>
         <a href="">
           <img
             class="social-media-icons"
-            src="../../images/icons8-instagram-desktop.png"
+            src="../images/icons8-instagram-desktop.png"
             alt="instagram icon"
           />
         </a>
         <a href="">
           <img
             class="social-media-icons"
-            src="../../images/icons8-twitter-desktop.png"
+            src="../images/icons8-twitter-desktop.png"
             alt="twitter icon"
           />
         </a>
