fixed issue with logout button display and fixed layout issue on my listings page

--- a/listing/index.html
+++ b/listing/index.html
@@ -56,7 +56,7 @@
                 <span class="span-text hidden">My Listings</span>
               </a>
             </li>
-            <li class="">
+            <li class="sidebar-li sidebar-li-layout">
               <a
                 class="nav-link link-flex"
                 id="my-bids-link-nav"
@@ -105,7 +105,7 @@
                 <span class="hidden span-text">Sign in</span>
               </a>
             </li>
-            <li class="sign-out-btn-li sidebar-li">
+            <li id="sidebar-li" class="">
               <button class="sign-out-btn nav-link link-flex">
                 <img
                   class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
@@ -120,7 +120,7 @@
       </div>
     </header>
     <main class="flex-1">
-      <div id="all-auction-listings"></div>
+      <div class="" id="all-auction-listings"></div>
     </main>
     <footer class="footer">
       <div class="footer-text-layout">
