--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -42,7 +42,7 @@
                 My Listings
               </a>
             </li>
-            <li>
+            <li class="sidebar-li sidebar-li-layout">
               <a id="my-bids-link-nav" href="/my_bids/">
                 <img
                   src="../../images/icons8-bids-Desktop.png"
@@ -75,7 +75,7 @@
                 Sign in
               </a>
             </li>
-            <li class="sign-out-btn-li sidebar-li">
+            <li id="sidebar-li" class="">
               <button class="sign-out-btn">
                 <img
                   src="../../images/icons8-sign-out-desktop.png"
