--- a/my_bids/index.html
+++ b/my_bids/index.html
@@ -56,7 +56,7 @@
                 <span class="span-text hidden">My Listings</span>
               </a>
             </li>
-            <li class="">
+            <li class="sidebar-li sidebar-li-layout">
               <a
                 class="nav-link link-flex"
                 id="my-bids-link-nav"
@@ -105,7 +105,7 @@
                 <span class="hidden span-text">Sign in</span>
               </a>
             </li>
-            <li class="sidebar-li-layout sidebar-li">
+            <li id="sidebar-li" class="">
               <button class="sign-out-btn nav-link link-flex">
                 <img
                   class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
