fixed issue with create listing button display and search icon

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             placeholder="Search listings..."
           />
           <div
-            class="absolute w-[220px] mb-16 md:w-[480px] md:mb-8 flex flex-row"
+            class="absolute w-[200px] mb-16 md:w-[480px] md:mb-8 flex flex-row"
           >
             <img
               src="./images/icons8-search-50.png"
@@ -97,7 +97,7 @@
                 <span class="hidden span-text">My Bids</span>
               </a>
             </li>
-            <li class="">
+            <li id="create-listing-li" class="">
               <a
                 class="nav-link link-flex"
                 id="create-listing-link-nav"
