--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -50,7 +50,7 @@
                 />My Bids</a
               >
             </li>
-            <li>
+            <li id="create-listing-li">
               <a id="create-listing-link-nav" href="/listing/create/">
                 <img src="../../images/icons8-add-desktop.png" alt="add icon" />
 
