--- a/my_bids/index.html
+++ b/my_bids/index.html
@@ -70,7 +70,7 @@
                 <span class="hidden span-text">My Bids</span>
               </a>
             </li>
-            <li class="">
+            <li id="create-listing-li" class="">
               <a
                 class="nav-link link-flex"
                 id="create-listing-link-nav"
