--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -75,7 +75,7 @@
                 Sign in
               </a>
             </li>
-            <li id="sidebar-li" class="">
+            <li id="sidebar-li" class="sidebar-li-layout">
               <button class="sign-out-btn">
                 <img
                   src="../../images/icons8-sign-out-desktop.png"
