--- a/auth/index.html
+++ b/auth/index.html
@@ -70,7 +70,7 @@
                 <span class="hidden span-text">My Bids</span>
               </a>
             </li>
-            <li class="">
+            <li id="create-listing-li" class="">
               <a
                 class="nav-link link-flex"
                 id="create-listing-link-nav"
@@ -105,7 +105,7 @@
                 <span class="hidden span-text">Sign in</span>
               </a>
             </li>
-            <li id="sidebar-li" class="">
+            <li id="sidebar-li" class="sidebar-li-layout">
               <button class="sign-out-btn nav-link link-flex">
                 <img
                   class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
