--- a/profile/index.html
+++ b/profile/index.html
@@ -105,7 +105,7 @@
                 <span class="hidden span-text">Sign in</span>
               </a>
             </li>
-            <li id="sidebar-li" class="">
+            <li id="sidebar-li" class="sidebar-li-layout">
               <button class="sign-out-btn nav-link link-flex">
                 <img
                   class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
