Updated styles for create listing form

--- a/listing/create/index.html
+++ b/listing/create/index.html
@@ -122,7 +122,7 @@
     <main class="flex-1 ml-6 md:ml-0">
       <div class="mt-8 create-form-container flex-row-center w-[100%] h-[100%]">
         <form
-          class="form-styles w-[200px] h-[580px] md:w-[283px] p-4"
+          class="form-styles w-[200px] h-[auto] md:w-[283px] p-4"
           name="create-listing"
           id="create-form"
         >
