--- a/listing/index.html
+++ b/listing/index.html
@@ -20,7 +20,7 @@
             id="hamburger-icon"
             class="w-16 h-16 md:w-20 md:h-20"
             src="../../images/Hamburger-icon.png"
-            alt=""
+            alt="hamburger icon"
           />
         </button>
         <nav class="nav nav-styles">
