--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -5,7 +5,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Art Auction App - Edit a Listing</title>
-    <script type="module" src="../../src/app.js" defer></script>
+    <script type="module" src="../../src/app.js"></script>
   </head>
   <body class="">
     <header>
