--- a/my_listings/index.html
+++ b/my_listings/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Art Auction App - My Listings</title>
-    <script type="module" src="../src/app.js" defer></script>
+    <script type="module" src="../src/app.js"></script>
   </head>
   <body class="body-styles">
     <header>
