Fixed html validation errors

--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -99,11 +99,7 @@
 
           <div>
             <label for="description">Description</label>
-            <textarea
-              id="description"
-              type="text"
-              name="description"
-            ></textarea>
+            <textarea id="description" name="description"></textarea>
           </div>
 
           <div>
