Fixed Update profile button function to display form

--- a/profile/index.html
+++ b/profile/index.html
@@ -134,9 +134,9 @@
           Update Profile
         </button>
       </div>
-      <div class="hidden relative flex-row-center" id="update-profile-form">
+      <div class="hidden relative flex-row-center" id="update-profile-form-box">
         <form
-          class="update-profile-form form-styles form-padding"
+          class="hidden update-profile-form form-padding"
           name="update-profile"
         >
           <h2 class="h2-styles form-title-styles">Update Profile</h2>
