fixed footer again and fixed create listing form size

--- a/listing/create/index.html
+++ b/listing/create/index.html
@@ -119,10 +119,12 @@
         </nav>
       </div>
     </header>
-    <main class="flex-1 ml-6 md:ml-0">
-      <div class="mt-8 create-form-container flex-row-center w-[100%] h-[100%]">
+    <main class="flex-1">
+      <div
+        class="mt-[150px] create-form-container flex-row-center w-[100%] h-[100%]"
+      >
         <form
-          class="form-styles w-[200px] h-[auto] md:w-[283px] p-4"
+          class="form-styles form-padding-create w-[220px] h-[auto] md:w-[283px]"
           name="create-listing"
           id="create-form"
         >
@@ -190,7 +192,7 @@
           <div class="flex-col-center-layout">
             <label class="gold-labels" for="endsAt">Ends at</label>
             <input
-              class="input-styles"
+              class="input-styles md:w-[201px]"
               id="endsAt"
               type="datetime-local"
               name="endsAt"
@@ -214,7 +216,7 @@
         <a href="">Contact</a>
         <a href="">About</a>
         <a href="">Policies</a>
-        <a href="">Terms and Conditions</a>
+        <a class="w-[100px] md:w-[200px]" href="">Terms and Conditions</a>
       </div>
       <div class="social-media-icons-box">
         <a href="">
