--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -126,7 +126,7 @@
         <a href="">Contact</a>
         <a href="">About</a>
         <a href="">Policies</a>
-        <a href="">Terms and Conditions</a>
+        <a class="w-[100px] md:w-[200px]" href="">Terms and Conditions</a>
       </div>
       <div>
         <a href="">
