--- a/listing/index.html
+++ b/listing/index.html
@@ -127,7 +127,7 @@
         <a href="">Contact</a>
         <a href="">About</a>
         <a href="">Policies</a>
-        <a href="">Terms and Conditions</a>
+        <a class="w-[100px] md:w-[200px]" href="">Terms and Conditions</a>
       </div>
       <div class="social-media-icons-box">
         <a href="">
