--- a/auth/index.html
+++ b/auth/index.html
@@ -139,16 +139,16 @@
 
       <div class="hidden relative" id="sign-in-form">
         <form
-          class="sign-in-form sign-in form-padding form-styles"
+          class="sign-in-form sign-in form-padding form-styles w-[18rem]"
           name="sign-in"
         >
           <h1 class="h1-styles mb-4 form-title-styles">Sign in</h1>
           <div class="flex flex-row">
-            <div class="mt-3">
+            <div class="mt-3 relative w-[30px]">
               <img
                 class="w-[30px] h-[30px] md:w-[40px] md:h-[40px] mt-2"
                 src="/images/icons8-username-64.png"
-                alt=""
+                alt="username icon"
               />
             </div>
             <div class="flex flex-col">
@@ -164,11 +164,11 @@
           </div>
 
           <div class="flex flex-row">
-            <div class="mt-4">
+            <div class="mt-4 w-[30px] relative">
               <img
                 class="w-[30px] h-[30px] md:w-[40px] md:h-[40px]"
                 src="/images/icons8-password-50.png"
-                alt=""
+                alt="password icon"
               />
             </div>
 
