Added space between bio label and update profile form title

--- a/profile/index.html
+++ b/profile/index.html
@@ -141,7 +141,7 @@
         >
           <h2 class="h2-styles form-title-styles">Update Profile</h2>
 
-          <div class="flex flex-col">
+          <div class="mt-4 flex flex-col">
             <label class="gold-labels" for="bio">Bio</label>
             <textarea
               class="text-area-styles"
