fixed layout on my listings and profile page

--- a/my_listings/index.html
+++ b/my_listings/index.html
@@ -120,11 +120,11 @@
       </div>
     </header>
     <main class="flex-1">
-      <div class="flex-row-center mt-4">
+      <div class="flex-row-center mt-[150px]">
         <h1 class="h1-styles">My Listings</h1>
       </div>
 
-      <div id="my-auction-listings"></div>
+      <div class="" id="my-auction-listings"></div>
     </main>
     <footer class="footer">
       <div class="footer-text-layout">
