--- a/profile/index.html
+++ b/profile/index.html
@@ -119,7 +119,7 @@
         </nav>
       </div>
     </header>
-    <main class="flex-1">
+    <main class="flex-1 mt-[150px]">
       <div class="my-profile">
         <div class="flex-row-center mt-4 mb-4">
           <h1 class="h1-styles">My Profile</h1>
