--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="module" src="./src/app.js"></script>
   </head>
   <body class="body-styles">
-    <header class="w-full pt-6 flex flex-row h-64">
+    <header class="w-full pt-6 flex flex-row h-58 fixed bg-black z-10">
 
       <div class="side-bar sidebar-styles">
         <img
@@ -16,10 +16,10 @@
           src="images/Logo.png"
           alt="Art logo"
         />
-        <button id="hamburger-btn">
+        <button id="hamburger-btn" class="'hamburger">
           <img
             id="hamburger-icon"
-            class="w-16 h-16 md:w-20 md:h-20"
+            class="hamburger w-16 h-16 md:w-20 md:h-20"
             src="images/Hamburger-icon.png"
             alt="hamburger icon"
           />
