--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="module" src="./src/app.js"></script>
   </head>
   <body class="body-styles">
-    <header class="w-full pt-6 flex flex-row h-58 fixed bg-black z-10">
+    <header class="header-styles">
 
       <div class="side-bar sidebar-styles">
         <img
