updated header and nav styles

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           />
         </button>
         <nav class="nav nav-styles">
-          <ul id="nav-menu" class="hidden">
+          <ul id="nav-menu" class="nav-menu">
             <li class="sidebar-li-layout">
               <a class="nav-link link-flex" href="/">
                 <img
