--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
       <div class="side-bar sidebar-styles">
         <img
-          class="logo w-16 h-auto md:w-20 md:h-auto"
+          class="logo  logo-no-margin w-16 "
           src="images/Logo.png"
           alt="Art logo"
         />
