updated header layout

--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
           </ul>
         </nav>
       </div>
-      <div class="search-category-box flex flex-col w-full">
-      <div class="search-bar search-bar-layout sidebar-height-when-closed">
+      <div class="search-category-box">
+      <div class="search-bar search-bar-layout ">
         <div
           class="flex-col-center-layout md:flex md:flex-row gap-2 relative h-20"
         >
