updated header styles

--- a/index.html
+++ b/index.html
@@ -149,42 +149,23 @@
       </div>
 
        <div class="Categories flex-row-center">
-        <ul class="two-column-layout md:flex md:justify-center gap-4 w-[70%]">
-          <li>
-            <a
-              class="h2-styles md:text-2xl category category-hover"
-              data-category="contemporary"
-              href=""
-              >Contemporary Art</a
-            >
-          </li>
-          <li>
-            <a
-              class="category h2-styles md:text-2xl category-hover"
-              data-category="modern"
-              href=""
-              >Modern Art</a
-            >
-          </li>
-          <li>
-            <a
-              class="category h2-styles md:text-2xl category-hover"
-              data-category="photography"
-              href=""
-            >
-              Photography
-            </a>
-          </li>
-          <li>
-            <a
-              class="category h2-styles md:text-2xl category-hover"
-              data-category="sculpture"
-              href=""
-              >Sculptures</a
-            >
-          </li>
-        </ul>
-      </div>
+
+  <select id="category-select" class="mobile-select">
+    <option value="contemporary">Contemporary Art</option>
+    <option value="modern">Modern Art</option>
+    <option value="photography">Photography</option>
+    <option value="sculpture">Sculptures</option>
+  </select>
+
+
+  <ul class="desktop-select  ">
+    <li><a class=" h2-styles text-2xl category category-hover" data-category="contemporary" href="">Contemporary Art</a></li>
+    <li><a class="h2-styles text-2xl category category-hover" data-category="modern" href="">Modern Art</a></li>
+    <li><a class="h2-styles text-2xl category category-hover" data-category="photography" href="">Photography</a></li>
+    <li><a class="h2-styles text-2xl category category-hover" data-category="sculpture" href="">Sculptures</a></li>
+  </ul>
+</div>
+
       </div>
     </header>
     <main class="flex-1">
