--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <header class="header-styles">
 
       <div class="side-bar sidebar-styles">
+        <div class="logo-container">
         <img
           class="logo  logo-no-margin w-16 "
           src="images/Logo.png"
           alt="Art logo"
         />
+        </div>
         <button id="hamburger-btn" class="'hamburger">
           <img
             id="hamburger-icon"
