updated header and nav styles

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </div>
       </div>
 
-       <div class="Categories flex-row-center">
+       <div class="Categories">
 
   <select id="category-select" class="mobile-select">
     <option value="contemporary">Contemporary Art</option>
@@ -159,13 +159,14 @@
     <option value="sculpture">Sculptures</option>
   </select>
 
-
+<div class="desktop-category-div">
   <ul class="desktop-select  ">
     <li><a class=" h2-styles text-2xl category category-hover" data-category="contemporary" href="">Contemporary Art</a></li>
     <li><a class="h2-styles text-2xl category category-hover" data-category="modern" href="">Modern Art</a></li>
     <li><a class="h2-styles text-2xl category category-hover" data-category="photography" href="">Photography</a></li>
     <li><a class="h2-styles text-2xl category category-hover" data-category="sculpture" href="">Sculptures</a></li>
   </ul>
+  </div>
 </div>
 
       </div>
