started adding header styles to listing page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           alt="Art logo"
         />
         </div>
-        <button id="hamburger-btn" class="'hamburger">
+        <button id="hamburger-btn" class="hamburger">
           <img
             id="hamburger-icon"
             class="hamburger w-16 h-16 md:w-20 md:h-20"
