--- a/index.html
+++ b/index.html
@@ -121,10 +121,12 @@
           </ul>
         </nav>
       </div>
+
       <div class="search-category-box">
+
       <div class="search-bar search-bar-layout ">
         <div
-          class="flex-col-center-layout md:flex md:flex-row gap-2 relative h-20"
+          class=" search-cat-box-mobile flex-col-center-layout md:flex md:flex-row gap-2 relative h-20"
         >
           <input
             type="text"
@@ -141,12 +143,15 @@
               class="search-icon w-8 h-8 absolute"
             />
           </div>
+
+          <div class="search-button-box">
           <button
             id="search-button"
             class="button-styles md:pl-8 md:pr-8 pl-3 pr-3"
           >
             Search
           </button>
+          </div>
         </div>
       </div>
 
@@ -170,6 +175,7 @@
 </div>
 
       </div>
+
     </header>
     <main class="flex-1">
       <div class="flex-row-center">
