--- a/auth/index.html
+++ b/auth/index.html
@@ -8,14 +8,14 @@
     <script type="module" src="../src/app.js"></script>
   </head>
   <body class="body-styles">
-    <header>
+    <header class="header-styles-other-pages">
       <div class="side-bar sidebar-styles">
         <img
-          class="logo w-16 h-auto md:w-20 md:h-auto"
+          class="logo  logo-no-margin w-16"
           src="../images/Logo.png"
           alt="Art logo"
         />
-        <button id="hamburger-btn">
+        <button id="hamburger-btn" class="hamburger">
           <img
             id="hamburger-icon"
             class="w-16 h-16 md:w-20 md:h-20"
@@ -24,7 +24,7 @@
           />
         </button>
         <nav class="nav nav-styles">
-          <ul id="nav-menu" class="hidden">
+          <ul id="nav-menu" class="nav-menu">
             <li class="sidebar-li-layout">
               <a class="nav-link link-flex" href="/">
                 <img
@@ -119,7 +119,8 @@
         </nav>
       </div>
     </header>
-    <main class="flex-1">
+    <main class="flex-1 ">
+      <div class="auth-main">
       <div class="flex-row-center">
         <h1 class="h1-styles w-[40%] md:w-[400px] mt-2 mb-4 text-center">
           Sign in or Register an Account
@@ -144,9 +145,9 @@
         >
           <h1 class="h1-styles mb-4 form-title-styles">Sign in</h1>
           <div class="flex flex-row">
-            <div class="mt-3 relative w-[30px]">
+            <div class="mt-3 relative w-[40px]">
               <img
-                class="w-[30px] h-[30px] md:w-[40px] md:h-[40px] mt-2"
+                class="w-[32px] h-[32px] md:w-[40px] md:h-[40px] mt-2"
                 src="/images/icons8-username-64.png"
                 alt="username icon"
               />
@@ -296,6 +297,7 @@
           </div>
           <p id="error-message-reg-form"></p>
         </form>
+      </div>
       </div>
     </main>
     <footer class="footer">
