fixed issue with dropdown nav in header

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="side-bar sidebar-styles">
         <div class="logo-container">
         <img
-          class="logo  logo-no-margin w-16 "
+          class="logo w-16 logo-no-margin "
           src="images/Logo.png"
           alt="Art logo"
         />
